--- a/test.ipynb
+++ b/test.ipynb
@@ -215,137 +215,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "np.ceil(0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
-       "      <th>D</th>\n",
-       "      <th>rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>one</td>\n",
-       "      <td>Ar</td>\n",
-       "      <td>04/26/2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>one</td>\n",
-       "      <td>Br</td>\n",
-       "      <td>04/25/2022</td>\n",
-       "      <td>7</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>one</td>\n",
-       "      <td>Ar</td>\n",
-       "      <td>02/03/2022</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>two</td>\n",
-       "      <td>Cr</td>\n",
-       "      <td>08/30/2015</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>two</td>\n",
-       "      <td>Ar</td>\n",
-       "      <td>07/3/1999</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     A   B           C  D  rating\n",
-       "0  one  Ar  04/26/2022  1       5\n",
-       "1  one  Br  04/25/2022  7       5\n",
-       "2  one  Ar  02/03/2022  5       3\n",
-       "3  two  Cr  08/30/2015  3       5\n",
-       "4  two  Ar   07/3/1999  4       3"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['rating'] = 5\n",
-    "previous_id = None\n",
-    "previous_day = None\n",
-    "previous_idx = None\n",
-    "for index, row in df.iterrows():\n",
-    "    current_id = row['A']\n",
-    "    if previous_id != current_id:\n",
-    "        previous_idx = None\n",
-    "    current_day = pd.to_datetime(row['C']).day_of_year\n",
-    "    if current_id == previous_id and current_day <= previous_day:\n",
-    "        if previous_idx == None:\n",
-    "            df.at[index, 'rating'] = df.at[index, 'rating'] - (previous_day-current_day)//29\n",
-    "        else:\n",
-    "            df.at[index, 'rating'] = df.at[previous_idx, 'rating'] - (previous_day-current_day)//29\n",
-    "        previous_idx = index\n",
-    "    previous_id = current_id\n",
-    "    previous_day = current_day\n",
-    "\n",
-    "df\n"
+    "# Start"
    ]
   },
   {
@@ -491,310 +364,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>account_id</th>\n",
-       "      <th>book_id</th>\n",
-       "      <th>creation_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>101254</td>\n",
-       "      <td>2022-03-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>110668</td>\n",
-       "      <td>2022-01-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>120582</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>111497</td>\n",
-       "      <td>2022-03-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>110483</td>\n",
-       "      <td>2022-02-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048570</th>\n",
-       "      <td>149086</td>\n",
-       "      <td>54928</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048571</th>\n",
-       "      <td>149087</td>\n",
-       "      <td>93140</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048572</th>\n",
-       "      <td>149088</td>\n",
-       "      <td>77549</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048573</th>\n",
-       "      <td>149089</td>\n",
-       "      <td>15114</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048574</th>\n",
-       "      <td>149090</td>\n",
-       "      <td>4930</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1048575 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         account_id  book_id creation_date\n",
-       "0                 0   101254    2022-03-20\n",
-       "1                 0   110668    2022-01-21\n",
-       "2                 1   120582    2022-04-26\n",
-       "3                 1   111497    2022-03-18\n",
-       "4                 1   110483    2022-02-24\n",
-       "...             ...      ...           ...\n",
-       "1048570      149086    54928    2022-04-26\n",
-       "1048571      149087    93140    2022-04-26\n",
-       "1048572      149088    77549    2022-04-26\n",
-       "1048573      149089    15114    2022-04-26\n",
-       "1048574      149090     4930    2022-04-26\n",
-       "\n",
-       "[1048575 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "action_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 442,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>account_id</th>\n",
-       "      <th>book_id</th>\n",
-       "      <th>creation_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>101254</td>\n",
-       "      <td>2022-03-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>110668</td>\n",
-       "      <td>2022-01-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>120582</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>111497</td>\n",
-       "      <td>2022-03-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>110483</td>\n",
-       "      <td>2022-02-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048570</th>\n",
-       "      <td>149086</td>\n",
-       "      <td>54928</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048571</th>\n",
-       "      <td>149087</td>\n",
-       "      <td>93140</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048572</th>\n",
-       "      <td>149088</td>\n",
-       "      <td>77549</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048573</th>\n",
-       "      <td>149089</td>\n",
-       "      <td>15114</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048574</th>\n",
-       "      <td>149090</td>\n",
-       "      <td>4930</td>\n",
-       "      <td>2022-04-26</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1046133 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         account_id  book_id creation_date\n",
-       "0                 0   101254    2022-03-20\n",
-       "1                 0   110668    2022-01-21\n",
-       "2                 1   120582    2022-04-26\n",
-       "3                 1   111497    2022-03-18\n",
-       "4                 1   110483    2022-02-24\n",
-       "...             ...      ...           ...\n",
-       "1048570      149086    54928    2022-04-26\n",
-       "1048571      149087    93140    2022-04-26\n",
-       "1048572      149088    77549    2022-04-26\n",
-       "1048573      149089    15114    2022-04-26\n",
-       "1048574      149090     4930    2022-04-26\n",
-       "\n",
-       "[1046133 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 442,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "action_df = action_df[pd.to_datetime(action_df['creation_date']).dt.year == 2022]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_66310/3307241635.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  action_df['rating'] = 5\n"
+     ]
+    }
+   ],
    "source": [
-    "def rating(row):\n",
-    "    row['rating'] = pd.to_datetime(row['creation_date']).dt.day_of_year//29 + 1\n",
-    "    return row\n",
-    "\n",
-    "action_df.groupby('account_id', group_keys=False).apply(rating)"
+    "action_df['rating'] = 5\n",
+    "previous_id = None\n",
+    "previous_day = None\n",
+    "previous_idx = None\n",
+    "for index, row in action_df.iterrows():\n",
+    "    current_id = row['account_id']\n",
+    "    if previous_id != current_id:\n",
+    "        previous_idx = None\n",
+    "    current_day = pd.to_datetime(row['creation_date']).day_of_year\n",
+    "    if current_id == previous_id and current_day <= previous_day:\n",
+    "        if previous_idx == None:\n",
+    "            action_df.at[index, 'rating'] = action_df.at[index, 'rating'] - (previous_day-current_day)//29\n",
+    "        else:\n",
+    "            action_df.at[index, 'rating'] = action_df.at[previous_idx, 'rating'] - (previous_day-current_day)//29\n",
+    "        previous_idx = index\n",
+    "    previous_id = current_id\n",
+    "    previous_day = current_day"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "action_df.to_csv('dataset/action-pre.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pre-process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>account_id</th>\n",
+       "      <th>book_id</th>\n",
+       "      <th>creation_date</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>101254</td>\n",
+       "      <td>2022-03-20</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>110668</td>\n",
+       "      <td>2022-01-21</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>120582</td>\n",
+       "      <td>2022-04-26</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>111497</td>\n",
+       "      <td>2022-03-18</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>110483</td>\n",
+       "      <td>2022-02-24</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1046128</th>\n",
+       "      <td>149086</td>\n",
+       "      <td>54928</td>\n",
+       "      <td>2022-04-26</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1046129</th>\n",
+       "      <td>149087</td>\n",
+       "      <td>93140</td>\n",
+       "      <td>2022-04-26</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1046130</th>\n",
+       "      <td>149088</td>\n",
+       "      <td>77549</td>\n",
+       "      <td>2022-04-26</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1046131</th>\n",
+       "      <td>149089</td>\n",
+       "      <td>15114</td>\n",
+       "      <td>2022-04-26</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1046132</th>\n",
+       "      <td>149090</td>\n",
+       "      <td>4930</td>\n",
+       "      <td>2022-04-26</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1046133 rows × 4 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "account_id\n",
-       "149090       1\n",
-       "48834        1\n",
-       "103398       1\n",
-       "103397       1\n",
-       "48837        1\n",
-       "          ... \n",
-       "6638      2209\n",
-       "107713    2398\n",
-       "92755     2604\n",
-       "5834      2851\n",
-       "64465     7157\n",
-       "Length: 149091, dtype: int64"
+       "         account_id  book_id creation_date  rating\n",
+       "0                 0   101254    2022-03-20       5\n",
+       "1                 0   110668    2022-01-21       3\n",
+       "2                 1   120582    2022-04-26       5\n",
+       "3                 1   111497    2022-03-18       4\n",
+       "4                 1   110483    2022-02-24       4\n",
+       "...             ...      ...           ...     ...\n",
+       "1046128      149086    54928    2022-04-26       5\n",
+       "1046129      149087    93140    2022-04-26       5\n",
+       "1046130      149088    77549    2022-04-26       5\n",
+       "1046131      149089    15114    2022-04-26       5\n",
+       "1046132      149090     4930    2022-04-26       5\n",
+       "\n",
+       "[1046133 rows x 4 columns]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "action_df.groupby('account_id').size().sort_values()"
+    "action_df = pd.read_csv(\"dataset/action-pre.csv\").dropna()\n",
+    "action_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +859,7 @@
        "[4505 rows x 13 columns]"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,22 +872,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "137"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "book_df['rating'].min()"
+    "len(book_df['categories'].unique())"
    ]
   },
   {
