add new feature

--- a/test.ipynb
+++ b/test.ipynb
@@ -3824,6 +3824,45 @@
    "source": [
     "pd.DataFrame([[15548, 2199]], columns=['account_id', 'book_id'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "   # client = pymongo.MongoClient(\"mongodb://localhost:27017\")\n",
+    "    # db = client[\"taaghche\"]\n",
+    "    # collection = db[\"actions\"]\n",
+    "    # t1 = time.time()\n",
+    "    # if collection.count_documents({}) > 0:\n",
+    "    #     data = collection.find()\n",
+    "    #     df_previous = pd.DataFrame(data).drop(['_id'], axis=1)\n",
+    "    # else:\n",
+    "    #     df_previous = pd.DataFrame()\n",
+    "\n",
+    "    # data_extractor = dataExtractor()\n",
+    "    # data_extractor.pre_process_actions(csv_url='dataset/actions.csv')\n",
+    "\n",
+    "    # df_previous.reset_index(drop=True, inplace=True)\n",
+    "    # data_extractor.actions_df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "    # if not data_extractor.actions_df.equals(df_previous):\n",
+    "    #     new_rows = data_extractor.actions_df[~data_extractor.actions_df.index.isin(df_previous.index)]\n",
+    "    #     print('found')\n",
+    "    #     if not new_rows.empty:\n",
+    "    #         collection.insert_many(new_rows.to_dict(orient=\"records\"))\n",
+    "    #         print(\"New rows added to the collection.\")\n",
+    "    #     else:\n",
+    "    #         print('same')\n",
+    "    # else:\n",
+    "    #     print('equ')\n",
+    "    # t2 = time.time()\n",
+    "\n",
+    "    # xx = t2-t1\n",
+    "    # print(xx)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
