add provider component:

--- a/test.ipynb
+++ b/test.ipynb
@@ -2606,6 +2606,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "pd.DataFrame().empty"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -2828,23 +2849,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.44559845, 0.44645593, 0.5932432 , 0.5176903 , 0.450618  ],\n",
-       "      dtype=float32)"
+       "1.0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preds"
+    "from sklearn.metrics import ndcg_score, accuracy_score,average_precision_score\n",
+    "average_precision_score([1,2,1],[.51,.2,3])"
    ]
   },
   {
